--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hola Mundo loco
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/efficient.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>LuisMarcoDev;</title>
+</head>
+
+<body>
+    <header class="center-flex">
+        <div class="avatar"></div><br>
+        <h1>LuisMarcoDev</h1><br>
+        <h2>&lt;/ Full Stack Developer&gt</h2>
+    </header>
+    <nav></nav>
+    <main>contenido</main>
+    <footer>footer</footer>
+</body>
+
+</html>
