--- a/index.html
+++ b/index.html
@@ -18,11 +18,24 @@
     <header class="center-flex">
         <div class="avatar"></div><br>
         <h1>LuisMarcoDev</h1><br>
-        <h2>&lt;/ Full Stack Developer&gt</h2>
+        <h2>&lt;/ Full Stack Developer&gt</h2><br>
+        <div class="keypad">
+            
+            <a href="#" class="button">
+                Intro
+            </a>
+            <a href="#" class="button">
+                Skills
+            </a>
+
+            <a href="#" class="button">
+                Abilities
+            </a>
+        </div>
     </header>
     <nav></nav>
-    <main>contenido</main>
-    <footer>footer</footer>
+    <!-- <main>contenido</main>
+    <footer>footer</footer> -->
 </body>
 
 </html>
